# mlx-client

./: .gitignore  Cargo.toml  README.md  install.sh  layout.kdl
src/: main.rs  prelude.rs  serve.rs  train.rs  xp.rs
src/serve/: create.rs  delete.rs  jobs.rs  list.rs  log.rs  mod.rs  run.rs  scale.rs
